@@ -1,1 +1,0 @@
-<%= hidden :token %>
