@@ -1,5 +1,8 @@
 2009-08-25  TOKI Yoshinori  <toki@freedom.ne.jp>
 
+	* lib/gluon/web/token.rb: one time token for defense of form
+	reload.
+
 	* lib/gluon/application.rb: renew request object to refresh
 	SCRIPT_NAME and PATH_INFO generated by Rack::URLMap.
 
